# FastAPI_MySQL

./: .gitignore  main.py  pyproject.toml  requirements.txt
app/api/config/: db_conn.py  settings.py
app/api/crud/users/: users.py
app/api/models/: users.py  users_dto.py
app/api/routers/users/: users.py
tests/: test_root.py
